samples/_failures_safe/1761127007_d2d17b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29e8867c.c: In function ‘main’:
./samples/SAFE/__tmp_29e8867c.c:140:23: error: missing terminating " character
  140 |         fprintf(file, "2024-01-15 10:37:00 INFO
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_29e8867c.c:140:9: error: expected expression at end of input
  140 |         fprintf(file, "2024-01-15 10:37:00 INFO
      |         ^~~~~~~
./samples/SAFE/__tmp_29e8867c.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29e8867c.c:140:9: error: expected declaration or statement at end of input
